# Lracking

./: .gitignore  CMakeLists.txt  README.md  Tracking.sln  总工况.md  雷达反制无人机系统整理.md
config/: README.md  camera.yaml  cascade.yaml  control.yaml  enemy.yaml
docs/: calibration.md  detection.md  plotjuggler_tuning_guide.md  sp_vision_analysis.md  stm32_changes_for_motor_engineer.md  system.md  tuning.md  tuning_guide_25m.md  调参速查.md
src/: CMakeLists.txt
src/UI/: CMakeLists.txt  ConfigTab.h  ControlPanel.cpp  ControlPanel.h  LaunchTab.cpp  LaunchTab.h  LinePlot.cpp  LinePlot.h  PROGRESS.md  PlotTab.cpp  PlotTab.h  ProcessManager.cpp  ProcessManager.h  RecordsTab.cpp  RecordsTab.h  StatusTab.cpp  StatusTab.h  ToolsTab.cpp  ToolsTab.h  UdpPlotReceiver.cpp  UdpPlotReceiver.h  main.cpp
src/calibrate/: CMakeLists.txt  README.md
src/calibrate/src/: laser_boresight.cpp
src/camera/: CMakeLists.txt  README.md
src/camera/galaxy_sdk/: PluginConfig.ini  README  ReleaseNote.txt  SetSocketBufferSize.sh
src/camera/galaxy_sdk/License/: galaxy_3rd_party_licenses.txt
src/camera/galaxy_sdk/config/: log4cplus.properties
src/camera/galaxy_sdk/sample/CSharp/GxActionCommand/: GxActionCommand.cs
src/camera/galaxy_sdk/sample/CSharp/GxSimpleGrab/: GxSimpleGrab.cs  GxSimpleGrab.csproj
src/camera/galaxy_sdk/sample/GxAcquireSoftTrigger/: GxAcquireSoftTrigger.cpp  Makefile
src/camera/galaxy_sdk/sample/GxGigeRecovery/: GxGigeRecovery.cpp  Makefile
src/camera/galaxy_sdk/sample/GxSingleCamColor/: GxSingleCamColor.cpp  Makefile
src/camera/galaxy_sdk/sample/GxSingleCamMono/: GxSingleCamMono.cpp  Makefile
src/camera/galaxy_sdk/sample/GxViewer/: AcquisitionThread.cpp  Common.cpp  Common.h  ExposureGain.cpp  FrameRateControl.cpp  GxViewer.cpp  GxViewer.pro  ImageImprovement.cpp  Roi.cpp  UserSetControl.cpp  WhiteBalance.cpp
src/camera/galaxy_sdk/sample/HalconQRCode/: HalconQRCode.cpp  Makefile  readme
src/camera/include/galaxy_camera/: galaxy_camera.h  gpu_demosaic_npp.h
src/camera/src/: galaxy_camera.cpp  galaxy_camera_config.cpp  galaxy_camera_frame.cpp  galaxy_camera_gpu.cpp  gpu_demosaic_npp.cu
src/common/: CMakeLists.txt  README.md
src/common/include/common/: config_io.h  tee_buf.h  time_utils.h  types.h
src/common/src/: config_io.cpp  time_utils.cpp
src/control/: CMakeLists.txt  README.md
src/control/config/: control.yaml
src/control/examples/: system_demo.cpp  tracking_main.cpp
src/control/include/control/: config.h  controller.h
src/control/src/: config.cpp  controller.cpp
src/control_panel/: CMakeLists.txt  ConfigTab.cpp  ControlPanel.cpp  ControlPanel.h  LaunchTab.cpp  LaunchTab.h  PROGRESS.md  main.cpp
src/detect/: CMakeLists.txt  DATA_COLLECTION_GUIDE.md  README.md  cascade_detector.cpp  cascade_detector.h  detector.h  measurement.cpp  measurement.h  onnx_detector.cpp  onnx_detector.h  sr_inferer.cpp  sr_inferer.h
src/detect/TRTInferX/: CMakeLists.txt  README.md
src/detect/TRTInferX/examples/yolo11/: CMakeLists.txt  main.cpp
src/detect/TRTInferX/include/: Inference.h  api.h  macros.h  postprocess.h  preprocess.h  public.h
src/detect/TRTInferX/kernel/: postprocess.cu  preprocess.cu
src/detect/TRTInferX/scripts/: export_all.sh  export_fp16_engine.sh  export_int8_engine.sh  export_onnx.py  gen_calib_bin.py
src/detect/TRTInferX/src/: Api.cpp  Inference.cpp
src/detect/config/: cascade.yaml
src/detect/model/export/: espcn_x2.onnx  espcn_x2.onnx.data  espcn_x2_fp16.engine
src/detect/model/layer1/train_yolov8s_plane/: args.yaml  results.csv
src/detect/model/layer2/train_yolov8s_laser_rx/: args.yaml  results.csv
src/detect/scripts/: annotate_laser_rx.py  balance_purple_samples.py  export_onnx.py  generate_layer2_crops.py  train_layer1.py  train_layer2.py  train_layer2_ensemble.py  train_layer2_improved.py  validate_cascade.py
src/gimbal/: CMakeLists.txt  README.md
src/gimbal/include/gimbal_serial/: protocol.h  serial_port.h
src/gimbal/src/: protocol.cpp  serial_port.cpp
src/plotter/: CMakeLists.txt  plotter.cpp  plotter.h
src/solve/: CMakeLists.txt  match_analyzer.cpp  match_analyzer.h  target_tracker.cpp  target_tracker.h
src/tracking/: CMakeLists.txt  color_voting.cpp  color_voting.h  control_learner.cpp  control_learner.h  track.cpp  tracking_main.cpp  visualization.cpp  visualization.h
tests/: CMakeLists.txt  README.md  camera_demo.cpp  color.cpp  control_demo.cpp  detect_demo.cpp  hit.cpp  laser_rx.cpp  latency.cpp  offset.cpp  plane.cpp  serial.cpp  track.cpp
tools/: SR_README.md  deploy_retrained_layer2.sh  laser_calib_gui.py  mine_hard_negatives.py  sr_extract_hr.py  sr_extract_video.py  sr_visualize.py
tools/sr/: sr_dataset.py  sr_export.py  sr_model.py  sr_train.py
tracking/: CMakeLists.txt  README.md  track.cpp
